# real-feel-models

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml  train.py  v1.0.0_results.txt
rf.v1.0.0/: config.py  loss.py  model.py  rf.v1.md
rf.v1.0.0/data-pipeline/: data.py  download_data.py
rf.v1.0.0/data_pipeline/: data.py  download_data.py
rf.v1.0.0/setup/: config.py  loss.py  model.py  optimizer.py
rf.v1.0.0/testing/: conftest.py  test_config.py  test_ensemble.py  test_loss.py  test_model.py  test_optimizer.py  test_trainer.py
rf.v1.0.0/training-pipeline/: train_ensemble.py  trainer.py
rf.v1.0.0/training_pipeline/: train_ensemble.py  trainer.py
